--- a/English.lng
+++ b/English.lng
@@ -1,4 +1,4 @@
-﻿; ============================================================
+; ============================================================
 ; AutoReSizer - Language File English
 ; Version: 1.5.0
 ; ============================================================
@@ -6,7 +6,7 @@
 [Info]
 LanguageName=English
 LanguageCode=en
-Author=HJS
+Author=test
 
 ; ============================================================
 ; General / Tray Menu (100-199)
@@ -30,6 +30,8 @@ Author=HJS
 215=GitHub:
 220=E-Mail:
 225=OK
+230=English language file by HJS
+235=Licensed under GPL-3.0
 
 ; ============================================================
 ; Settings (300-399)
