Update German language file

--- a/Deutsch.lng
+++ b/Deutsch.lng
@@ -1,6 +1,6 @@
-﻿; ============================================================
+; ============================================================
 ; AutoReSizer - Sprachdatei Deutsch
-; Version: 1.5.0
+; Version: 1.5.3
 ; ============================================================
 
 [Info]
@@ -30,6 +30,8 @@ Author=HJS
 215=GitHub:
 220=E-Mail:
 225=OK
+230=Deutsche Sprachdatei von HJS
+235=Lizenziert unter GPL-3.0
 
 ; ============================================================
 ; Einstellungen (300-399)
